--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "gulp-replace": "^1.1.3",
     "gulp-uglify": "^3.0.2",
     "husky": "^7.0.4"
+  },
+  "dependencies": {
+    "bootstrap-icons": "^1.8.1"
   }
 }
