--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "online-store",
+  "name": "online-store-1",
   "version": "1.0.0",
   "description": "# ДЗ",
   "main": "gulpfile.js",
